--- a/MVC_Portfolio/Views/Home/Index.cshtml
+++ b/MVC_Portfolio/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@using MVC_Portfolio.Helper    
+﻿  
 <!--Header Start-->
     <header id="first">
         <div class="header-content">
@@ -85,9 +85,9 @@
                      data-flickity='{ "imagesLoaded": true, "percentPosition": false}'>
                     <a href="#" data-toggle="modal" data-target="#js_exercises" role="button"> <img src="~/Content/assets/js.jpg" alt="Javascript" id="ColumnControl" /></a>
                     <a href="https://lbandli-shoppingcart.azurewebsites.net" data-target="" role="button" target="_blank"><img src="~/Content/assets/Shopping_cart_icon.svg.png" alt="Shopping Cart" /></a>
-                    <a href="https://lbandli-blog.azurewebsites.net" data-target="" role="button"><img src="~/Content/assets/blog.jpg" alt="Blog" /></a>
-                    <a href="https://lbandli-bugtracker.azurewebsites.net" data-target="" role="button"><img src="~/Content/assets/bug.jpg" alt="Bug Tracker" /></a>
-                    <a href="#" data-toggle="modal" data-target="#PlcHdlrModal" role="button"><img src="~/Content/assets/Budget.jpg" alt="Budgeter" /></a>
+                    <a href="https://lbandli-blog.azurewebsites.net" data-target="" role="button" target="_blank"><img src="~/Content/assets/blog.jpg" alt="Blog" /></a>
+                    <a href="https://lbandli-bugtracker.azurewebsites.net" data-target="" role="button" target="_blank"><img src="~/Content/assets/bug.jpg" alt="Bug Tracker" /></a>
+                    <a href="https://lbandli-budgeter.azurewebsites.net" data-target="" role="button" target="_blank"><img src="~/Content/assets/Budget.jpg" alt="Budgeter" /></a>
                     <a href="#" data-toggle="modal" data-target="#PlcHdlrModal" role="button"><img src="~/Content/assets/Car.jpeg" alt="Car Finder" /></a>
                 </div>
             </div>
@@ -257,8 +257,8 @@
             </div>
         </div>
     </section>
-    <!--Contact Form End
-    <!--Modal's Start
+    <!--Contact Form End -->
+    <!--Modal's Start -->
     <!--js_exercises modal start-->
     <div id="js_exercises" class="modal fade " tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-xl">
