--- a/MVC_Portfolio/Views/Shared/_Layout.cshtml
+++ b/MVC_Portfolio/Views/Shared/_Layout.cshtml
@@ -8,27 +8,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="generator" content="Codeply">
     <!--Icon-->
-    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="/Content/favicomatic/apple-touch-icon-57x57.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/Content/favicomatic/apple-touch-icon-114x114.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/Content/favicomatic/apple-touch-icon-72x72.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/Content/favicomatic/apple-touch-icon-144x144.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="/Content/favicomatic/apple-touch-icon-60x60.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="/Content/favicomatic/apple-touch-icon-120x120.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="/Content/favicomatic/apple-touch-icon-76x76.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="/Content/favicomatic/apple-touch-icon-152x152.png" />
-    <link rel="icon" type="image/png" href="/Content/favicomatic/favicon-196x196.png" sizes="196x196" />
-    <link rel="icon" type="image/png" href="/Content/favicomatic/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/png" href="/Content/favicomatic/favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="/Content/favicomatic/favicon-16x16.png" sizes="16x16" />
-    <link rel="icon" type="image/png" href="/Content/favicomatic/favicon-128.png" sizes="128x128" />
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="~/Content/favicomatic/apple-touch-icon-57x57.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="~/Content/favicomatic/apple-touch-icon-114x114.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="~/Content/favicomatic/apple-touch-icon-72x72.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="~/Content/favicomatic/apple-touch-icon-144x144.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="~/Content/favicomatic/apple-touch-icon-60x60.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="~/Content/favicomatic/apple-touch-icon-120x120.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="~/Content/favicomatic/apple-touch-icon-76x76.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="~/Content/favicomatic/apple-touch-icon-152x152.png" />
+    <link rel="icon" type="image/png" href="~/Content/favicomatic/favicon-196x196.png" sizes="196x196" />
+    <link rel="icon" type="image/png" href="~/Content/favicomatic/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/png" href="~/Content/favicomatic/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="~/Content/favicomatic/favicon-16x16.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="~/Content/favicomatic/favicon-128.png" sizes="128x128" />
     <meta name="application-name" content="&nbsp;" />
     <meta name="msapplication-TileColor" content="#FFFFFF" />
-    <meta name="msapplication-TileImage" content="/Content/favicomatic/mstile-144x144.png" />
-    <meta name="msapplication-square70x70logo" content="/Content/favicomatic/mstile-70x70.png" />
-    <meta name="msapplication-square150x150logo" content="/Content/favicomatic/mstile-150x150.png" />
-    <meta name="msapplication-wide310x150logo" content="/Content/favicomatic/mstile-310x150.png" />
-    <meta name="msapplication-square310x310logo" content="/Content/favicomatic/mstile-310x310.png" />
+    <meta name="msapplication-TileImage" content="~/Content/favicomatic/mstile-144x144.png" />
+    <meta name="msapplication-square70x70logo" content="~/Content/favicomatic/mstile-70x70.png" />
+    <meta name="msapplication-square150x150logo" content="~/Content/favicomatic/mstile-150x150.png" />
+    <meta name="msapplication-wide310x150logo" content="~/Content/favicomatic/mstile-310x150.png" />
+    <meta name="msapplication-square310x310logo" content="~/Content/favicomatic/mstile-310x310.png" />
     <!--Referance-->    
+
     <link rel="stylesheet" href="~/Content/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/Content/css/animate.min.css" />
     <link rel="stylesheet" href="~/Content/css/ionicons.min.css" />
@@ -94,14 +95,14 @@
             </div>
         </div>
         <script src="~/Scripts/jquery.min.js"></script>
-        <script src="~/Scripts/flickity-docs.min.js"></script>
         <script src="~/Scripts/bootstrap.min.js"></script>
         <script src="~/Scripts/jquery.easing.min.js"></script>
+        <script src="~/Scripts/flickity-docs.min.js"></script>
         <script src="~/Scripts/wow.js"></script>
-        <script src="~/Scripts/scripts.js"></script>
         <script src="~/Scripts/NumberExercises.js"></script>
         <script src="~/Scripts/SyntaxHighlighter/shCore.js"></script>
         <script src="~/Scripts/SyntaxHighlighter/shBrushJScript.js"></script>
+        <script src="~/Scripts/scripts.js"></script>
         <script type="text/javascript">
         SyntaxHighlighter.all()
         </script>
