--- a/MVC_Portfolio/Views/Home/Index.cshtml
+++ b/MVC_Portfolio/Views/Home/Index.cshtml
@@ -25,7 +25,7 @@
                     <h2 class="margin-top-0 text-primary">Built On The Bootstrap Grid</h2>
                     <br>
                     <p class="text-faded">
-                        After <a href="http://www.coderfoundry.com/">Coder Foundry</a> Lane is looking for work in the web development field.
+                        After <a href="http://www.coderfoundry.com/">Coder Foundry</a> Lane is looking for work in the web development field. Please feel free to look at his resume below.
                     </p>
                     <a href="~/Content/resume.pdf" target="_blank" class="btn btn-default btn-xl page-scroll">Learn More</a>
                 </div>
@@ -197,64 +197,6 @@
                     <hr class="primary">
                     <p>We love feedback. Fill out the form below and we'll get back to you as soon as possible.</p>
                 </div>
-                    @*<form id="contact-form" method="post" action="contact.php" role="form">
-
-                        <div class="messages"></div>
-
-                        <div class="controls">
-
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <label for="form_name">Firstname *</label>
-                                        <input id="form_name" type="text" name="name" class="form-control" placeholder="Please enter your firstname *" required="required" data-error="Firstname is required.">
-                                        <div class="help-block with-errors"></div>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <label for="form_lastname">Lastname *</label>
-                                        <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Please enter your lastname *" required="required" data-error="Lastname is required.">
-                                        <div class="help-block with-errors"></div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <label for="form_email">Email *</label>
-                                        <input id="form_email" type="email" name="email" class="form-control" placeholder="Please enter your email *" required="required" data-error="Valid email is required.">
-                                        <div class="help-block with-errors"></div>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <label for="form_phone">Phone</label>
-                                        <input id="form_phone" type="tel" name="phone" class="form-control input-custom2" placeholder="Please enter your phone">
-                                        <div class="help-block with-errors"></div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <div class="form-group">
-                                        <label for="form_message">Message *</label>
-                                        <textarea id="form_message" name="message" class="form-control" placeholder="Message for me *" rows="4" required="required" data-error="Please,leave us a message."></textarea>
-                                        <div class="help-block with-errors"></div>
-                                    </div>
-                                </div>
-                                <div class="col-md-12" >
-                                    <button class="btn btn-success btn-send btn-center center-block" href="#" data-toggle="modal" data-target="#PlcHdlrModal">Send</button>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-12" >
-                                    <p class="text-muted"><strong>*</strong> These fields are required.</p>
-                                </div>
-                            </div>
-                        </div>
-
-                    </form>*@
                 <div class="row">
                     @using (Html.BeginForm("Contact", "Home", FormMethod.Post))
                     {     @Html.AntiForgeryToken()
