--- a/MVC_Portfolio/Views/Home/Index.cshtml
+++ b/MVC_Portfolio/Views/Home/Index.cshtml
@@ -84,12 +84,12 @@
             <div class="row no-gutter">
                 <div class="carousel" style="background:#000"
                      data-flickity='{ "imagesLoaded": true, "percentPosition": false}'>
-                    <a href="#" data-toggle="modal" data-target="#js_exercises" role="button"> <img src="~/Content/assets/js.jpg" alt="Javascript" id="ColumnControl" /></a>
-                    <a href="https://lbandli-shoppingcart.azurewebsites.net" data-target="" role="button" target="_blank"><img src="~/Content/assets/Shopping_cart_icon.svg.png" alt="Shopping Cart" /></a>
-                    <a href="https://lbandli-blog.azurewebsites.net" data-target="" role="button" target="_blank"><img src="~/Content/assets/blog.jpg" alt="Blog" /></a>
+                    <a href="#" data-toggle="modal" data-target="#js_exercises" role="button"><img src="~/Content/assets/js.jpg" alt="Javascript" id="ColumnControl" /></a>
+                    <a href="https://lbandli-shoppingcart.azurewebsites.net" class="box" data-target="" role="button" target="_blank"><img src="~/Content/assets/Shopping_cart_icon.svg.png" class="box" alt="Shopping Cart" /></a>
+                    <a href="https://lbandli-blog.azurewebsites.net"  data-target="" role="button" target="_blank"><img src="~/Content/assets/blog.jpg" alt="Blog" /></a>
                     <a href="https://lbandli-bugtracker.azurewebsites.net" data-target="" role="button" target="_blank"><img src="~/Content/assets/bug.jpg" alt="Bug Tracker" /></a>
                     <a href="https://lbandli-budgeter.azurewebsites.net" data-target="" role="button" target="_blank"><img src="~/Content/assets/Budget.jpg" alt="Budgeter" /></a>
-                    <a href="#" data-toggle="modal" data-target="#PlcHdlrModal" role="button"><img src="~/Content/assets/Car.jpeg" alt="Car Finder" /></a>
+                    <a href="http://lbandli-carfinder.azurewebsites.net/" data-toggle="modal" data-target="#PlcHdlrModal" role="button"><img src="~/Content/assets/Car.jpeg" alt="Car Finder" /></a>
                 </div>
             </div>
         </div>
