--- a/MVC_Portfolio/Content/CSS/Custom.css
+++ b/MVC_Portfolio/Content/CSS/Custom.css
@@ -524,3 +524,25 @@ img::-moz-selection {
     color: #fff;
     background: 0 0;
 }
+.caption {  
+    font-family: Tahoma;
+    font-size: .5em;
+    background-color: rgba(0,0,0,0.8);  
+    position: absolute;  
+    color: #fff;  
+    z-index: 100;  
+    -webkit-transition: all 300ms ease-out;  
+    -moz-transition: all 300ms ease-out;  
+    -o-transition: all 300ms ease-out;  
+    -ms-transition: all 300ms ease-out;  
+    transition: all 300ms ease-out;  
+    left: 0;  
+    opacity: 0;  
+    width: 150px;  
+    height: 150px;  
+    text-align: left;  
+    padding: 15px;
+}  
+ .box:hover .fade-caption {  
+    opacity: 1;  
+}
